force-app/main/default/objects/OrderDeliveryGroup/fields/companyName__c.field-meta.xml
<CustomField>
    <fullName>companyName__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>