force-app/main/default/objects/OrderDeliveryGroup/fields/ShippingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressLine2__c</fullName>
    <label>Shipping Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>